# paystack-cli

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  charge.py  miscellaneous.py  paystack.spec  pyproject.toml
paystack_cli/: apple_pay.py  bulk_charges.py  charge.py  customers.py  dedicated_virtual_accounts.py  disputes.py  integration.py  main.py  miscellaneous.py  payment_pages.py  payments_requests.py  plans.py  products.py  refunds.py  settlements.py  subaccounts.py  subscriptions.py  terminals.py  transactions.py  transactions_splits.py  transfer_recipients.py  transfers.py  transfers_control.py  utils.py  verification.py
src/paystack_cli/: __init__.py  __main__.py  apple_pay.py  bulk_charges.py  charge.py  customers.py  dedicated_virtual_accounts.py  disputes.py  integration.py  miscellaneous.py  payment_pages.py  payments_requests.py  plans.py  products.py  refunds.py  settlements.py  subaccounts.py  subscriptions.py  terminals.py  transactions.py  transactions_splits.py  transfer_recipients.py  transfers.py  transfers_control.py  utils.py  verification.py
