[project]
name = "paystack-cli"
version = "0.2.0"
description = "A command line app for interacting with Paystack's API"
authors = [
    { name = "Gbenga Adeyi", email = "adeyigbenga005@gmail.com" }
]
keywords = ["paystack-python", "pypaystack", "paystack", "paystackapi"]
license = "MIT"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "pypaystack2>=2.0.3",
    "typer[all]>=0.12.3",
]
readme = "README.md"
requires-python = ">= 3.9"

[project.scripts]
"paystack" = "paystack_cli.__main__:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pyinstaller>=6.6.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/paystack_cli"]
