[project]
name = "paystack-cli"
version = "0.2.1"
description = "A command line app for interacting with Paystack's API"
authors = [
    { name = "Gbenga Adeyi", email = "adeyigbenga005@gmail.com" }
]
keywords = ["paystack-python", "pypaystack", "paystack", "paystackapi"]
license = "MIT"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "pypaystack2>=2.1.1",
    "typer-slim[standard]>=0.15.1",
]
readme = "README.md"
requires-python = ">= 3.11"

[project.scripts]
paystack = "paystack_cli.__main__:run"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mypy>=1.13.0",
    "pyinstaller>=6.11.1",
    "ruff>=0.8.2",
]
